src/test/deca/context/valid/class/8_declMethodSansBody.deca
/* Description:
     tester class qui possede de method sans block

    Historique:
      cree le 08/01/2020
*/

   class A {

    int getX (int y){

    }


   }
